test/cli/test/node-status/check_node_for_cve_2022_0185.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: "1.23"
    kyverno.io/kyverno-version: 1.6.0
    policies.kyverno.io/category: Other
    policies.kyverno.io/description: Linux CVE-2022-0185 can allow a container escape
      in Kubernetes if left unpatched. The affected Linux kernel versions, at this
      time, are 5.10.84-1 and 5.15.5-2. For more information, refer to https://security-tracker.debian.org/tracker/CVE-2022-0185.
      This policy runs in background mode and flags an entry in the ClusterPolicyReport
      if any Node is reporting one of the affected kernel versions.
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Node
    policies.kyverno.io/title: Check Node for CVE-2022-0185
  name: check-kernel
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Node
    name: kernel-validate
    validate:
      message: Kernel is vulnerable to CVE-2022-0185.
      pattern:
        status:
          nodeInfo:
            kernelVersion: '!5.10.84-1 & !5.15.5-2'
      failureAction: Audit
