test/cli/test/node-status/kyverno-test.yaml
name: check-kernel
policies:
- check_node_for_cve_2022_0185.yaml
resources:
- resource.yaml
results:
- kind: Node
  policy: check-kernel
  resources:
  - test-check-kernel-version
  result: pass
  rule: kernel-validate
